20121212 - fhabermann
* initial version of libsecure