@@ -1,2 +1,5 @@
+20121214 - fhabermann
+* check page title and content title
+
 20121212 - fhabermann
 * initial version of libsecure
